fix: fix & improve validation