@@ -1,10 +1,13 @@
 package ru.yandex.practicum.filmorate.controller;
 
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import ru.yandex.practicum.filmorate.model.Film;
 import ru.yandex.practicum.filmorate.utils.exceptions.ValidationException;
 
+import javax.validation.Valid;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -20,12 +23,12 @@ public class FilmController {
     private int idCount = 0;
 
     @GetMapping
-    public List<Film> getAllFilms() {
-        return new ArrayList<>(films.values());
+    public ResponseEntity<List<Film>> getAllFilms() {
+        return ResponseEntity.ok(new ArrayList<>(films.values()));
     }
 
     @PostMapping
-    public Film createFilm(@RequestBody Film film) {
+    public ResponseEntity<Film> createFilm(@Valid @RequestBody Film film) {
         if (!isFilmValid(film)) {
             log.warn("Ошибка валидации фильма {}", film);
             throw new ValidationException("Ошибка валидации фильма.");
@@ -35,11 +38,11 @@ public class FilmController {
         film.setId(idCount);
         films.put(film.getId(), film);
         log.info("Создан новый фильм {}", film);
-        return film;
+        return ResponseEntity.ok(film);
     }
 
     @PutMapping
-    public Film updateFilm(@RequestBody Film film) {
+    public ResponseEntity<Film> updateFilm(@Valid @RequestBody Film film) {
         if (!isFilmValid(film)) {
             log.warn("Ошибка валидации фильма {}", film);
             throw new ValidationException("Ошибка валидации фильма.");
@@ -51,11 +54,11 @@ public class FilmController {
 
         films.put(film.getId(), film);
         log.info("Обновлен фильм {}", film);
-        return film;
+        return ResponseEntity.ok(film);
     }
 
     protected boolean isFilmValid(Film film) {
-        if (film.getName().isBlank()) return false;
+        if (StringUtils.isBlank(film.getName())) return false;
         if (film.getDuration() <= 0) return false;
         if (film.getDescription().length() > 200) return false;
         return !film.getReleaseDate().isBefore(LocalDate.of(1895, 12, 28));
