@@ -1,10 +1,13 @@
 package ru.yandex.practicum.filmorate.controller;
 
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import ru.yandex.practicum.filmorate.model.User;
 import ru.yandex.practicum.filmorate.utils.exceptions.ValidationException;
 
+import javax.validation.Valid;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -20,12 +23,12 @@ public class UserController {
     private int idCount = 0;
 
     @GetMapping
-    public List<User> getAllUsers() {
-        return new ArrayList<>(users.values());
+    public ResponseEntity<List<User>> getAllUsers() {
+        return ResponseEntity.ok(new ArrayList<>(users.values()));
     }
 
     @PostMapping
-    public User createUser(@RequestBody User user) {
+    public ResponseEntity<User> createUser(@Valid @RequestBody User user) {
         if (!isUserValid(user)) {
             log.warn("Ошибка валидации пользователя {}", user);
             throw new ValidationException("Ошибка валидации пользователя.");
@@ -33,16 +36,16 @@ public class UserController {
 
         idCount++;
         user.setId(idCount);
-        if (user.getName() == null || user.getName().isBlank()) {
+        if (StringUtils.isBlank(user.getName())) {
             user.setName(user.getLogin());
         }
         users.put(user.getId(), user);
         log.info("Создан новый пользователь {}", user);
-        return user;
+        return ResponseEntity.ok(user);
     }
 
     @PutMapping
-    public User updateUser(@RequestBody User user) {
+    public ResponseEntity<User> updateUser(@Valid @RequestBody User user) {
         if (!isUserValid(user)) {
             log.warn("Ошибка валидации пользователя {}", user);
             throw new ValidationException("Ошибка валидации пользователя.");
@@ -54,12 +57,12 @@ public class UserController {
 
         users.put(user.getId(), user);
         log.info("Обновлен пользователь {}", user);
-        return user;
+        return ResponseEntity.ok(user);
     }
 
     protected boolean isUserValid(User user) {
-        if (user.getLogin().isBlank() || user.getLogin().contains(" ")) return false;
-        if (user.getEmail().isBlank() || !user.getEmail().contains("@")) return false;
+        if (StringUtils.isBlank(user.getLogin()) || user.getLogin().contains(" ")) return false;
+        if (StringUtils.isBlank(user.getEmail()) || !user.getEmail().contains("@")) return false;
         return !user.getBirthday().isAfter(LocalDate.now());
     }
 }
